metadata-retriever/metadata/objects/Contract.object
<CustomObject>
    <fields>
        <fullName>Amount_Financed__c</fullName>
        <description>Amount Financed</description>
        <label>Amount Financed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Annual_Call_Task_1_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Annual Call Task 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_Call_Task_2_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Annual Call Task 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_Call_Task_3_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Annual Call Task 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Annual_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Annual Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Assist_End_Date__c</fullName>
        <description>/*
Created By Polaris Yu 2013-8-23
Function: Get the date: Contract End date - 4 months
Used By: Report filter - Monthly: Expiring Contracts
*/</description>
        <formula>IF((MONTH(EndDate)-4) &gt; 0
, DATE(YEAR(EndDate), MONTH(EndDate)-4, DAY(EndDate))
, DATE(YEAR(EndDate)-1, MONTH(EndDate)+8, DAY(EndDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>*Assist End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Balloon_RV_Amount__c</fullName>
        <description>Balloon / RV Amount</description>
        <label>Balloon / RV Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Base_Interest_Rate__c</fullName>
        <description>Base Interest Rate</description>
        <label>Base Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CMS_Contract_Link__c</fullName>
        <formula>HYPERLINK(&quot;javascript:if(typeof(srcUp)==&apos;function&apos;) {srcUp(&apos;/&quot; &amp; Id &amp; &quot;?isdtp=vw&apos;);}&quot;+ &quot; else {window.location.href=&apos;/&quot; &amp; Id &amp; &quot;?isdtp=vw&apos;}&quot;,  Contract_Id__c , &quot;_self&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CMS Contract No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Description__c</fullName>
        <label>Campaign Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Id__c</fullName>
        <description>Unique Idenetifier from CMS</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique Idenetifier from CMS</inlineHelpText>
        <label>CMS Contract No.</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <label>Contract Status</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved for financing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Approved for Sale</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Released</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closing Receipt Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conditioned</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Continue with existing borrower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Current</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Declined</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Default-Collection Officer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Default-External Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Payout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Payout-Cheque Under Clearance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Payout-Sale and Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early Payout-Sale of Asset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executed-Existing Borrower</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executed-Financing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executed-Payment Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat Cancel Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Loss Arrangement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Write off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irregular</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irregular Complied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Litigation</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Make__c</fullName>
        <formula>TEXT(Vehicle__r.Brand__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Make</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Model__c</fullName>
        <formula>Vehicle__r.Car_Model__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Model</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Year__c</fullName>
        <formula>TEXT(Vehicle__r.YearOfManufacture__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Group__c</fullName>
        <label>Dealer Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Displays the dealer name who is involved in this contract</description>
        <label>Dealer Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Dealer</value>
            </filterItems>
            <filterItems>
                <field>Account.Dealer_Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contracts (Dealer Name)</relationshipLabel>
        <relationshipName>Contracts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Dealer_Number__c</fullName>
        <description>Dealer Number SFDC</description>
        <label>Dealer Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Direct_Debit_Authority__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Direct Debit Authority</description>
        <label>Direct Debit Authority</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EOC_Call_Task_1_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EOC Call Task 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EOC_Call_Task_2_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EOC Call Task 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EOC_Call_Task_3_del__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EOC Call Task 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EOC_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>EOC Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FPI_Cover__c</fullName>
        <defaultValue>false</defaultValue>
        <description>FPI Cover</description>
        <label>FPI Cover</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FPI_Premium_Amount__c</fullName>
        <label>FPI Premium Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Finance_Brand__c</fullName>
        <label>Finance Brand</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Finance_Product_Type__c</fullName>
        <label>Finance Product Type</label>
        <picklist>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operating Lease</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hire Purchase</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Loan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance Lease</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Fleet__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Fleet - indicates whether the related compay is a fleet customer or not</description>
        <inlineHelpText>Fleet - indicates whether the related compay is a fleet customer or not</inlineHelpText>
        <label>Fleet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Franchise_Description__c</fullName>
        <label>Franchise Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GAP_Cover__c</fullName>
        <defaultValue>false</defaultValue>
        <description>GAP Cover</description>
        <label>GAP Cover</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GAP_Premium_Amount__c</fullName>
        <description>GAP Premium Amount</description>
        <label>GAP Premium Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GFV__c</fullName>
        <defaultValue>false</defaultValue>
        <description>GFV</description>
        <label>GFV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Good_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Good Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <description>Interest Rate</description>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LDCL_Contract_Id__c</fullName>
        <externalId>true</externalId>
        <label>LDCL Contract Id</label>
        <length>200</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Lease_Exp_Date__c</fullName>
        <description>Lease Exp. Date</description>
        <label>Lease Exp. Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Monthly_Repayment__c</fullName>
        <description>Monthly Repayment</description>
        <label>Monthly Repayment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_Variation__c</fullName>
        <label>Product Variation</label>
        <picklist>
            <picklistValues>
                <fullName>TBC</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Purchase_Method__c</fullName>
        <description>Purchase Method</description>
        <label>Purchase Method</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Residual__c</fullName>
        <description>Residual</description>
        <label>Residual</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Signer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will be populated in case the borrower is a company and the customer information has been delivered by CMS</description>
        <label>Signer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.Name</field>
                <operation>equals</operation>
                <value>Person Account</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Signer Contracts</relationshipLabel>
        <relationshipName>SignerContracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Product__c</fullName>
        <label>Sub-Product</label>
        <picklist>
            <picklistValues>
                <fullName>TBC</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>The_Day_After_Start_One_Year__c</fullName>
        <formula>StartDate + 365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>The Day After Start One Year</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>VIN - Displays the VIN of the vehicle linked to the contract</description>
        <label>VIN</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Welcome_Call_Task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Welcome Call Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Welcome_Call__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Welcome Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X150_Days_Before_EOC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>/*
Created By Polaris Yu 2013-8-22
Function: This field will be updated by workflow 150 days before the contract end date to trigger the auto creating leads function and sending email function
Used By: 
*/</description>
        <label>*150 Days Before EOC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>livetime__c</fullName>
        <formula>(year(Contract_End_Date__c) - year( StartDate )) * 12 + month(Contract_End_Date__c) - month( StartDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>livetime</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllActivatedContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>All Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllContracts</fullName>
        <columns>CONTRACT.CONTRACT_NUMBER</columns>
        <columns>LDCL_Contract_Id__c</columns>
        <columns>Contract_Id__c</columns>
        <columns>SALES.ACCOUNT.NAME</columns>
        <columns>CONTRACT.START_DATE</columns>
        <columns>CONTRACT.END_DATE</columns>
        <columns>Vehicle__c</columns>
        <columns>Residual__c</columns>
        <columns>Finance_Product_Type__c</columns>
        <columns>Dealer_Name__c</columns>
        <columns>Dealer_Number__c</columns>
        <columns>Product_Variation__c</columns>
        <columns>Sub_Product__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllDraftContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>All Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>AllInApprovalContracts</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>All In Approval Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyActivatedContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>A</value>
        </filters>
        <label>My Activated Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyDraftContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>D</value>
        </filters>
        <label>My Draft Contracts</label>
    </listViews>
    <listViews>
        <fullName>MyInApprovalContracts</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CONTRACT.STATUS_CODE</field>
            <operation>equals</operation>
            <value>P</value>
        </filters>
        <label>My In Approval Contracts</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Enddate_must_be_bigger_than_Startdate</fullName>
        <active>true</active>
        <errorConditionFormula>StartDate &gt; Contract_End_Date__c</errorConditionFormula>
        <errorMessage>End Date must be bigger than Start Date</errorMessage>
    </validationRules>
</CustomObject>